--- a/taskmanager/templates/edit_category.html
+++ b/taskmanager/templates/edit_category.html
@@ -1,22 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="light-blue-text text-darken-4 center-align">Add Category</h3>
+<h3 class="light-blue-text text-darken-4 center-align">Edit Category</h3>
 
 <div class="row card-pannel">
-    <form class="col s12" method="POST" action="{{ url_for('add_category') }}">
+    <form class="col s12" method="POST" action="{{ url_for('edit_category', category_id=category.id) }}">
         <!-- category name -->
         <div class="row dark-blue-text text-darken-4">
             <div class="input-field col s12">
-                <input id="category_name" name="category_name" minlength="3" maxlength="25" type="text" class="validate"
-                    required>
+                <input id="category_name" name="category_name" value="{{ category.category_name }}" minlength="3"
+                    maxlength="25" type="text" class="validate" required>
                 <label for="category-name">Category Name</label>
             </div>
         </div><!-- submit button -->
         <div class="row">
             <div class="col s12 center-align">
                 <button type="submit" class="btn-large light-blue darken-1">
-                    Add Category
+                    Edit Category
                 </button>
             </div>
         </div>
